# SelfUpdate

./: CMakeLists.txt  README.md
include/selfupdate/: config.h.in
include/selfupdate/update/: update.hpp
include/selfupdate/version/: version.hpp
src/: main.cpp
src/test/: main.cpp  versiontest.cpp
src/update/: update.cpp
src/version/: version.cpp
